# path-validation

./: .gitmodules  Dockerfile  NIZK.sh  README.md  app.js  docker-compose.yml  docker_help.txt  entrypoint.sh  genhashonly2.sh  genproof.sh  initialize.sh  nodeGenProof.sh  notes.txt  package-lock.json  package.json  time.sh  xorhash.sh
controller/: nodeController.js
data/: .gitkeep
path-validation-src/: .gitignore  CMakeLists.txt  Dockerfile  README.md  genhashonly.sh  genproof.sh  run.sh  verifyproof.sh
path-validation-src/app/: gensecret.cpp  prover.cpp  verifier.cpp  xorHash.cpp
path-validation-src/data/: .gitkeep
path-validation-src/inc/: mpc_core.h  zkbpp_core.h
public/: index.html
routes/: index.js
